--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "get-refresh-token": "node scripts/get-google-refresh-token.cjs"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "googleapis": "^131.0.0",
     "next": "^14.2.33",
     "react": "18.2.0",
