--- a/docs/env.example
+++ b/docs/env.example
@@ -5,3 +5,8 @@ GOOGLE_SHEETS_SPREADSHEET_ID=
 # Optional: override the target range (defaults to "Feuille 1!A:Z")
 GOOGLE_SHEETS_RANGE=
 
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
+SENDGRID_FROM_NAME=Maroc Zakat
+REMINDER_CRON_SECRET=
+
