--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "googleapis": "^131.0.0",
     "next": "^14.2.33",
     "react": "18.2.0",
